[package]
name = "pig-game"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
rand = "0.8.5"
salvo = { version = "0.71.1", features = ["websocket", "cors", "oapi", "serve-static", "logging", "session"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = "1.1.3"
